--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <!-- jsPsych core & button plugin -->
     <script src="dist/jspsych.js"></script>
     <script src="dist/plugin-html-button-response.js"></script>
-    <link rel="stylesheet" href="dist/jspsych.css" />
-
+    <link rel="stylesheet" href="../dist/jspsych.css" />
+    
     <style>
       body {
         font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Arial, sans-serif;
